flux/verify-flux-sources/.chainsaw-test/repo-bad-git.yaml
apiVersion: source.toolkit.fluxcd.io/v1
kind: GitRepository
metadata:
  name: gitrepo-01
spec:
  interval: 5m0s
  url: https://github.com/notmyorg/podinfo
