flux/verify-flux-sources/.chainsaw-test/repo-good-bucket.yaml
apiVersion: source.toolkit.fluxcd.io/v1beta2
kind: Bucket
metadata:
  name: bucket-01
spec:
  interval: 5m0s
  endpoint: minio.myorg.com
  bucketName: example
---
apiVersion: source.toolkit.fluxcd.io/v1beta2
kind: Bucket
metadata:
  name: bucket-02
  namespace: flux-system
spec:
  interval: 5m0s
  endpoint: minio.notmyorg.com
  bucketName: example
