flux/verify-flux-sources/.chainsaw-test/repo-good-git.yaml
apiVersion: source.toolkit.fluxcd.io/v1
kind: GitRepository
metadata:
  name: gitrepo-01
spec:
  interval: 5m0s
  url: https://github.com/myorg/podinfo
---
apiVersion: source.toolkit.fluxcd.io/v1
kind: GitRepository
metadata:
  name: gitrepo-02
spec:
  interval: 5m0s
  url: ssh://git@github.com:myorg/podinfo
---
apiVersion: source.toolkit.fluxcd.io/v1
kind: GitRepository
metadata:
  name: gitrepo-03
  namespace: flux-system
spec:
  interval: 5m0s
  url: https://github.com/notmyorg/podinfo
